update page templates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer>
+  <p class="container">This site is designed to be <strong>responsive</strong>, <strong>HTML5</strong> validated, <strong>CSS validated</strong>, optimized for <strong>accessibility</strong>, with minimal <strong>JavaScript</strong> enhancements. It's also a github.io site with Jekyll blog integration.</p>
 <a class="icon-twitter social" href="http://twitter.com/jannypie"><span class="accessible">Twitter</span></a> <a class="icon-github social" href="http://github.com/jannypie"><span class="accessible">GitHub</span></a> <a class="icon-linkedin social" href="http://linkedin.com/in/jldennison/"><span class="accessible">LinkedIn</span></a>
 </footer>
 
