--- a/_layouts/dbc-post.html
+++ b/_layouts/dbc-post.html
@@ -2,7 +2,7 @@
 <html lang="en">
   {% include head.html %}
     <body class="post">
-      {% include header.html %}
+      {% include header_post.html %}
       <main class="container">
         <article>
           <h1> {{ page.title }} </h1>
