--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	{% include head.html %}
-		<body class="page">
-			{% include header.html %}
-			<main class="container-fluid">
-				{{ content }}
-			</main><!-- /container -->
-			{% include footer.html %}
-		</body>
+	<body>
+		{% include header.html %}
+		<main class="container-fluid">
+			{{ content }}
+		</main><!-- /container -->
+		{% include footer.html %}
+	</body>
 </html>
