--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	{% include head.html %}
-		<body class="gallery">
-					{% include header.html %}
-			<div class="container">
-					<div class='gallery-wrap'>
-						<h1> {{ page.title }} </h1>
-						{{ content }}
-					</div>
-					{% include footer.html %}
-			</div><!-- /container -->
-		</body>
+	<body class="gallery">
+		{% include header_gallery.html %}
+		<main class="container-fluid">
+			<h1> {{ page.title }} </h1>
+			{{ content }}
+		</main><!-- /container -->
+		{% include footer.html %}
+	</body>
 </html>
