--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 	{% include head.html %}
 	<body>
 		{% include header.html %}
-		<main class="container-fluid">
+		<main class="container">
 			{{ content }}
 		</main><!-- /container -->
 		{% include footer.html %}
