--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -3,7 +3,7 @@
 	{% include head.html %}
 	<body class="gallery">
 		{% include header_gallery.html %}
-		<main class="container-fluid">
+		<main class="container">
 			<h1> {{ page.title }} </h1>
 			{{ content }}
 		</main><!-- /container -->
