--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@
 	{% include head.html %}
 	<body class="page">
 		{% include header.html %}
-		<main class="container-fluid">
+		<main class="container">
 			<h1> {{ page.title }} </h1>
 			{{ content }}
 		</main><!-- /container -->
