--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
 	{% include head.html %}
 	<body class="post">
 		{% include header_post.html %}
-		<main class="container-fluid">
+		<main class="container">
 			<article>
 				<h1> {{ page.title }} </h1>
 				<span class="meta"> {{ page.date | date: '%B' }} {{ page.date | date: '%e' }}, {{ page.date | date: '%Y' }} </span>
