--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -47,6 +47,7 @@ body {
   line-height: $spacing*1.5;
 }
 p {
+  margin-top: 0;
   margin-bottom: $spacing;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -78,7 +79,24 @@ a {
   font-weight: 400;
   text-decoration: none;
 }
-
+.button {
+  display: inline-block;
+  padding: 1em 2em;
+  border: 1px solid $light-gray;
+  background: rgba(250,250,250,0.8);
+  -webkit-transition: background 0.8s, border-color 0.8s;
+  -moz-transition: background 0.8s, border-color 0.8s;
+  transition: background 0.8s, border-color 0.8s;
+}
+.button:hover {
+  text-decoration: none;
+  background: $yellow;
+  color: white;
+  border-color: $yellow;
+}
+.button.small {
+  padding: 0.5em 1em;
+}
 
 /* Color Styles */
 body {
@@ -171,4 +189,5 @@ blockquote .meta, .post blockquote .meta {
   color: whitesmoke;
   padding: 2em 0;
   overflow: auto;
+  margin-bottom: 2em;
 }
