--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	{% include head.html %}
 	<body class="gallery">
-		{% include header_gallery.html %}
+		{% include header_page.html %}
 		<main class="container">
 			<h1> {{ page.title }} </h1>
 			{{ content }}
