--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -7,6 +7,11 @@
   display: block;
   margin: 0 auto;
 }
+.col-half > h2:first-of-type,
+.col-third > h2:first-of-type,
+.col-twothird > h2:first-of-type {
+  margin-top: 0;
+}
 @media only screen and (min-width: 481px) {
   .col-half, .col-third, .col-twothird {
     display: inline-block;
