--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -3,7 +3,6 @@ Main Menu
 =============================== */
 nav {
     padding: 0;
-    font-size: 0.8em;
 }
 nav ul {
     margin: 0;
@@ -14,47 +13,9 @@ nav ul, nav li {
   list-style: none;
   white-space: nowrap;
 }
-nav .expanded {
-  display: none;
-}
-nav ul li ul {
-  display: none;
-  position: absolute;
-  padding: 0;
-  top: 100%;
-  left: 0;
-}
-nav ul li:hover ul, nav ul li:focus ul {
-  display: block;
-}
 nav li {
-  background: rgba(250,250,250,0.7);
-  color: #464f61;
-  font-family: 'Scada', sans-serif;
   display: inline-block;
-  position: relative;
-    -webkit-transition: background-color 500ms ease-out;
-    -moz-transition: background-color 500ms ease-out;
-    -o-transition: background-color 500ms ease-out;
-    transition: background-color 500ms ease-out;
-  margin-bottom: 0.1em;
 }
-nav li a, nav li a:visited, nav ul li a {
-  display: block;
-  color: #464f61;
-  text-decoration: none;
-  border: 0;
-  font-size: 1.1em;
-  padding: 1em;
+nav li a, nav li a:visited {
+  @extend .button;
 }
-nav li:hover {
-  background: #464f61;
-  color: whitesmoke;
-}
-nav li:hover a, nav li:hover a:visited {
-  color: whitesmoke;
-}
-nav ul li ul li {
-  float: left;
-}
-
