content style fixes for responsiveness

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -17,6 +17,7 @@ header, footer, section {
   width: 100%;
   max-width: $body-width;
   overflow: auto;
+  padding: 0 0.5em;
 }
 
 /* Float Blocks */
