--- a/_sass/_queries.scss
+++ b/_sass/_queries.scss
@@ -10,6 +10,9 @@
 }
 
 @media only screen and (min-width: 801px) {
+  .container {
+    padding: 0;
+  }
   header {
     max-height: 100%;
     background: $header-bg url(/images/yellow-field-1600.jpg) bottom center / cover;
@@ -17,6 +20,13 @@
     header h1 {
       font-size: 5em;
     }
+
+  .page .featured {
+    display: inline-block;
+    max-width: 45%;
+    margin-right: 2%;
+    vertical-align: top;
+  }
 }
 @media only screen and (min-width: 1601px) {
   header {
