--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -58,6 +58,9 @@ h1, h2, h3, h4, h5, h6 {
 h1.title {
   font-size: $spacing*4;
 }
+h1 {
+  font-weight: bold;
+}
 h1, h2 {
   font-size: $spacing*1.75;
   margin-bottom: $spacing*2;
@@ -190,4 +193,8 @@ blockquote .meta, .post blockquote .meta {
   padding: 2em 0;
   overflow: auto;
   margin-bottom: 2em;
+}
+
+ul.no-bullets {
+  list-style-type: none;
 }
