add button to homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,7 @@
           <div class="col-twothird">
             <h2>Why, hello there.</h2>
             <p class="excerpt">Lorizzle ipsum bling bling sit amizzle, consectetuer adipiscing elit. Nizzle sapien velizzle, bling bling volutpat, suscipit , gravida vel, arcu. Check it out hizzle that's the shizzle. We gonna chung erizzle. Fo izzle dolor fo turpis tempizzle tempor. Gangsta boom shackalack mofo et turpizzle. Sizzle izzle tortor. Pellentesque uhuh ... yih!</p>
+            <p><a href="/imlooking.html" class="button special">I'm available for hire!</a></p>
           </div>
         </div>
       </section>
