--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <nav>
   <ul>
     <li><a href="{{ site.url }}#intro">Hellos</a></li>
-    <li><a href="archive.html">Writings</a></li>
-    <li><a href="workings.html">Workings</a></li>
-    <!-- <li><a href="artings.html">Artings</a></li> -->
+    <li><a href="{{ site.url }}/archive.html">Writings</a></li>
+    <li><a href="{{ site.url }}/workings.html">Workings</a></li>
+    <!-- <li><a href="{{ site.url }}/artings.html">Artings</a></li> -->
   </ul>
 </nav>
