fix project listings on homepage, add project

--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -1,4 +1,6 @@
-{% for project in site.projects reversed limit:6 %}
+{% assign projects = site.projects | order: path %}
+{% assign projects = projects | reverse %}
+{% for project in projects limit:6  %}
 <article class="featured project">
   <a class="post-img" href="{{ project.url }}" rel="bookmark" title="Link to {{ project.title }}"><img src="{{ project.image }}" alt="Sample of {{ project.title }}"></a>
   <a href="{{ project.url }}" class="featured-text">
