add new project to workings

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@
       <section id="intro">
         <div class="container">
           <div class="col-third">
-            <img class="hexagon column-third--left" src="images/janstache.png" alt="Janstache">
+            <img class="hexagon column-third--left" src="images/janstache.png" title="Fo' shizzle I know I have Snoop Ipsum over thizzle" alt="Picture of Janstache">
           </div>
           <div class="col-twothird">
             <h2>Why, hello there.</h2>
