transfer blogs from dbc folder to main stream

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -154,6 +154,15 @@ a:hover {
   top: -99999px;
   left: -99999px;
 }
+.success {
+  color: $green;
+}
+.alert {
+  color: $orange;
+}
+.error {
+  color: $red;
+}
 
 // Images
 img, video {
