update button styles for accessibility

--- a/css/base.scss
+++ b/css/base.scss
@@ -9,6 +9,7 @@ $spacing: 14px;
 $body-width: 768px;
 $blue: #3d79f2;
 $teal: #30a7bf;
+$dark-teal: #037489;
 $green: #30bf78;
 $yellow: #f4d400;
 $light-yellow: #fff280;
