--- a/_sass/_articles.scss
+++ b/_sass/_articles.scss
@@ -9,22 +9,31 @@
   width: 100%;
 }
 a.featured-text {
-  @extend .button;
+  background: rgba(250,250,250,0.9);
   color: $gray;
   display: block;
+  padding: 1em;
   position: absolute;
   bottom: 0;
   width: 100%;
   -webkit-box-shadow: 0px -1px 5px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px -1px 5px 0px rgba(0,0,0,0.5);
   box-shadow: 0px -1px 5px 0px rgba(0,0,0,0.3);
+  -webkit-transition: background 300ms, color 300ms;
+  -moz-transition: background 300ms, color 300ms;
+  transition: background 300ms, color 300ms;
+}
+a.featured-text:hover {
+  background: $tangerine;
+  color: #fff;
+  text-decoration: none;
 }
 .post-img {
   max-height: 20em;
   display: block;
-  -webkit-transition: max-height 0.8s;
-  -moz-transition: max-height 0.8s;
-  transition: max-height 0.8s;
+  -webkit-transition: max-height 300ms;
+  -moz-transition: max-height 300ms;
+  transition: max-height 300ms;
   overflow: hidden;
 }
 .post-img:hover {
