--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -89,43 +89,37 @@ body {
   color: $near-black;
 }
 a, a:visited {
-  color: $tangerine;
-  -webkit-transition: color 0.8s;
-  -moz-transition: color 0.8s;
-  -o-transition: color 0.8s;
-  transition: color 0.8s;
+  color: $dark-teal;
+  -webkit-transition: color 300ms;
+  -moz-transition: color 300ms;
+  -o-transition: color 300ms;
+  transition: color 300ms;
 }
 a:hover {
-  color: $yellow;
+  color: $teal;
   text-decoration: underline;
 }
 [class*="icon-"]:hover {
-  color: $yellow;
+  color: $teal;
 }
 
-.button {
+.button, .button:visited {
   background: rgba(250,250,250,0.9);
+  border: 1px solid $light-gray;
   color: $gray;
   display: block;
-  padding: 1em;
-  -webkit-transition: background 0.8s, color 0.8s;
-  -moz-transition: background 0.8s, color 0.8s;
-  transition: background 0.8s, color 0.8s;
-}
-.button:hover {
-  background: $tangerine;
-  color: whitesmoke;
-  text-decoration: none;
-}
-.button.teal {
-  color: whitesmoke;
-  background: $teal;
   font-weight: 700;
   letter-spacing: 1px;
+  padding: 1em;
+  -webkit-transition: background 300ms, color 300ms, border 300ms;
+  -moz-transition: background 300ms, color 300ms, border 300ms;
+  transition: background 300ms, color 300ms, border 300ms;
 }
-.button.teal:hover {
-  color: $teal;
-  background: whitesmoke;
+.button:hover {
+  background: $teal;
+  border: 1px solid $teal;
+  color: #fff !important;
+  text-decoration: none;
 }
 .button.small {
   padding: 0.5em 1em;
@@ -141,7 +135,7 @@ a:hover {
 /* Special General Typography Styles */
 .comment {
   color: $light-gray;
-  font-size: 0.8em;
+  font-size: 300mem;
   font-weight: 300;
 }
 .meta {
