--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,6 +1,11 @@
 
 header {
-  background: $header-bg url(/images/yellow-field-480.jpg) bottom center / cover;
+  // background: $header-bg url(/images/yellow-field-480.jpg) bottom center / cover;
+  background: $header-bg url(/images/yellow-field-480.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   color: whitesmoke;
   text-align: center;
   margin-top: 0;
@@ -8,7 +13,7 @@ header {
   max-height: 450px;
   position: relative;
   overflow: hidden;
-  transition: background 1s ease-in 2s;
+  transition: background 600ms ease-in 2s;
 }
 
 header h1 {
