update colors for accessibility

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -206,8 +206,8 @@ blockquote .meta, .post blockquote .meta {
 }
 
 #intro {
-  background: $teal;
-  color: whitesmoke;
+  background: $dark-teal;
+  color: #fff;
   padding: 2em 0;
   overflow: auto;
   margin-bottom: 2em;
