--- a/css/base.scss
+++ b/css/base.scss
@@ -9,14 +9,14 @@ $spacing: 14px;
 $body-width: 768px;
 $blue: #3d79f2;
 $teal: #30a7bf;
-$dark-teal: #037489;
+$dark-teal: #237c8e;
 $green: #30bf78;
 $yellow: #f4d400;
 $light-yellow: #fff280;
 $tangerine: #e5ac00;
 $orange: #e57339;
 $red: #f23d3d;
-$pink: #e5398f;
+$pink: #e11d7f;
 $purple: #973df2;
 $light-gray: #a0a0a0;
 $gray: #414141;
