--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,7 +1,6 @@
 
 header {
-  // background: $header-bg url(/images/yellow-field-480.jpg) bottom center / cover;
-  background: $header-bg url(/images/yellow-field-480.jpg) no-repeat center center fixed;
+  background: $tangerine;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -13,13 +12,12 @@ header {
   max-height: 450px;
   position: relative;
   overflow: hidden;
-  transition: background 600ms ease-in 2s;
 }
 
 header h1 {
   margin-top: 50%;
   font-size: 3em;
-  text-shadow: 0px 0px 2px rgba(200, 150, 100, 0.8);
+  text-shadow: 0px 0px 2px rgba(99, 57, 15, 0.8)
 }
 header h1 a, header h1 a:visited {
   color: whitesmoke;
