--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -1,7 +1,6 @@
-{% assign projects = site.projects | order: path %}
-{% assign projects = projects | reverse %}
-{% for project in projects limit:6  %}
-  {% if project.categories contains 'featured' %}
+{% assign featuredprojects = site.projects | order: path | where: "categories" , "featured") %}
+{% assign featuredprojects = featuredprojects | reverse %}
+{% for project in featuredprojects limit:2  %}
   <article class="featured project">
     <a class="post-img" href="{{ project.url }}" rel="bookmark" title="Link to {{ project.title }}"><img src="{{ project.image }}" alt="Sample of {{ project.title }}"></a>
     <a href="{{ project.url }}" class="featured-text">
@@ -9,5 +8,4 @@
       <p>{{ project.meta-description }}</p>
     </a>
   </article>
-  {% endif %}
 {% endfor %}
