--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -13,7 +13,7 @@ header {
   overflow: hidden;
   &:before {
     content: '';
-    display: block;
+    display: none;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -25,9 +25,11 @@ header {
 }
 @keyframes fadein {
   from {
+    display: block;
     background-color: rgba(255,242,128,1);
   }
   to {
+    display: none;
     background-color: rgba(255,242,128,0);
   }
 }
