update background image

--- a/css/base.scss
+++ b/css/base.scss
@@ -20,8 +20,9 @@ $pink: #e11d7f;
 $purple: #973df2;
 $light-gray: #a0a0a0;
 $gray: #414141;
+$springbg: #D2D3D5;
 $near-black: #1a1a1a;
-$header-bg: $light-yellow;
+$header-bg: $springbg;
 
 @import "grid";
 @import "main";
