home page updates

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,14 +1,13 @@
 <section id="intro">
   <div class="container">
     <div class="col-third">
-      <img class="hexagon column-third--left" src="images/janstache.png" title="Fo' shizzle I know I have Snoop Ipsum over thizzle" alt="Picture of Janstache">
+      <img class="column-third--left" src="/assets/images/jan-pic-filter-web.jpg" title="Jan" alt="Picture of Jan">
     </div>
     <div class="col-twothird">
       <h2>Why, hello there.</h2>
-      <p class="excerpt">I'm Jan. I'm working to make the world a better place.</p>
-      <p class="excerpt">I began my career as a scientist, continued as an artist, then pursued a love of programming. I bring <em>all</em> of my talents, skills, and experience to create worthwhile digital experiences. I care passionately about developing useful, enjoyable tools for users who need to get things done.</p>
-      <p class="excerpt">I do not actually have a mustache.</p>
-      <!-- <p><a href="/imlooking.html" class="button special">I'm available for hire!</a></p> -->
+      <p class="excerpt">I am a Full-Stack UX/Web Developer experienced in web design and front-to-back development, and passionate about unifying both into creative, performant, accessible User Experiences. Highly-skilled in component-based CSS and modular JavaScript, I also specialize in bridging the languages of design and development. My documentation receives compliments.</p>
+      <p class="excerpt">Additionally, I am the Chapter Leader of the Girl Develop It Columbus chapter, teach Introduction to JavaScript, have held volunteer positions as graphic designer &amp; web developer for local arts and entertainment groups, and regularly submit artwork to charity gallery shows.</p>
+      <p class="excerpt">I love to talk about Sass, UX/UI, movies, and puppies of all kinds.</p>
     </div>
   </div>
 </section>
