--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,5 +1,5 @@
 header {
-  background: $header-bg url(/images/geometric.jpeg) no-repeat right top;
+  background: $header-bg url(/assets/images/geometric-300.jpg) no-repeat right top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -80,7 +80,7 @@ header a:hover, nav a:hover {
 }
 header .subtitle {
   display: inline-block;
-  background: rgba(250,250,250,0.8);
+  background: rgba(250,250,250,0.9);
   padding: 0.5em 1em;
   margin: 0 auto;
   color: #464f61;
