--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -217,6 +217,7 @@ blockquote .meta, .post blockquote .meta {
 .no-bullets {
   list-style-type: none;
   margin: 0;
+  padding: 0;
 }
 
 .accordion {
