update blockquote styles

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -170,7 +170,7 @@ code {
   border: 1px solid silver;
 }
 pre code, blockquote {
-  background: #ddd;
+  background: $pale-gray;
   padding: 1em;
   line-height: 1.5em;
   word-wrap:break-word;
@@ -182,21 +182,23 @@ pre code, blockquote {
 blockquote {
   padding: 2.5em 1em;
   position: relative;
+  margin-bottom: 1em;
 }
 blockquote:before, blockquote:after {
-  content: '';
+  color: $dark-teal;
+  font-family: 'Times New Roman',serif;
   display: block;
-  font-size: 5em;
-  font-color: silver;
+  font-size: 3em;
   position: absolute;
-  color: #aaa;
 }
 blockquote:before {
+  content: '“';
   top: 0.3em;
   left: 0.3em;
 }
 blockquote:after {
-  top: 0.3em;
+  content: '”';
+  bottom: 0.3em;
   right: 0.3em;
 }
 blockquote .meta, .post blockquote .meta {
