--- a/css/base.scss
+++ b/css/base.scss
@@ -18,6 +18,7 @@ $orange: #e57339;
 $red: #f23d3d;
 $pink: #e11d7f;
 $purple: #973df2;
+$pale-gray: ghostwhite;
 $light-gray: #a0a0a0;
 $gray: #414141;
 $springbg: #D2D3D5;
