update home page with name change

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@ _________,   ___/ /  ,__________
 <meta charset="utf-8">
 <title>{{ page.title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="author" content="Jan Dennison">
+<meta name="author" content="Jan Dennison Humphries">
 <meta name="robots" content="{{ page.meta-robots }}" />
 <meta name="description" content="{{ page.meta-description }}" />
 <link rel="canonical" href="{{ page.url | canonical }}" />
