--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
-    {% include nav.html %}
-    <h1>
-      <a href="{{ site.url }}" rel="bookmark" title="Website for Jan Dennison">Jan Dennison</a>
+  {% include nav.html %}
+  <h1>
+      <a href="{{ site.url }}" rel="bookmark" title="Website for Jan Humphries">Jan Humphries</a>
     </h1>
-    <h4 class="subtitle">Web Developer</h4>
+  <h4 class="subtitle">I make internet things</h4>
 </header>
