--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,13 +1,12 @@
 <section id="intro">
   <div class="container">
     <div class="col-third">
-      <img class="column-third--left" src="/assets/images/jan-pic-filter-web.jpg" title="Jan" alt="Picture of Jan">
+      <img class="column-third--left" src="/assets/images/jan-pic-web-2017.jpg" title="Jan" alt="Picture of Jan">
     </div>
     <div class="col-twothird">
-      <h2>Why, hello there.</h2>
-      <p class="excerpt">I am a Full-Stack UX/Web Developer experienced in web design and front-to-back development, and passionate about unifying both into creative, performant, accessible User Experiences. Highly-skilled in component-based CSS and modular JavaScript, I also specialize in bridging the languages of design and development. My documentation receives compliments.</p>
-      <p class="excerpt">Additionally, I am the Chapter Leader of the Girl Develop It Columbus chapter, teach Introduction to JavaScript, have held volunteer positions as graphic designer &amp; web developer for local arts and entertainment groups, and regularly submit artwork to charity gallery shows.</p>
-      <p class="excerpt">I love to talk about Sass, UX/UI, movies, and puppies of all kinds.</p>
+      <h2>Why, hello there!</h2>
+      <p class="excerpt">I build and improve beautiful things for the Internet.</p>
+      <p class="excerpt"></p>
     </div>
   </div>
 </section>
