--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -5,7 +5,11 @@
     </div>
     <div class="col-twothird">
       <h2>Why, hello there!</h2>
-      <p class="excerpt">I build and improve beautiful things for the Internet.</p>
+      <p class="excerpt">The internet is everywhere. From our pockets to global organizations, the digital network connects more people, things, and ideas today than ever before. No more is the internet just for sharing information; it is actively shaping our world. I believe
+        in the transformative power of the internet for individuals, communities, and society.
+      </p>
+      <p class="excerpt">I am a Web Software Engineer with special focus on UX and the Front-End. My goal is to make inclusive websites and applications that make lives better. To do so, I use modern industry practices to build engaging experiences. I design, prototype,
+        code, and launch work from large sites to individual interactions.</p>
       <p class="excerpt"></p>
     </div>
   </div>
