add content to more section

--- a/_includes/index/index_section5.html
+++ b/_includes/index/index_section5.html
@@ -1,8 +1,17 @@
 <section class="section section--more">
   <div class="column copy-column">
     <h3 class="title">MORE</h3>
-    <p class="copy">Need a blurb here</p>
-    <p class="copy"></p>
+    <p class="copy">Need a blurb here?</p>
+    <ul class="no-bullets">
+      <li><span class="icon-heart-empty"></span>Highly empathetic, inclusive, team-oriented</li>
+      <li><span class="icon-heart-empty"></span>Value integrity and transparency</li>
+      <li><span class="icon-heart-empty"></span>Easily distill key information from diverse sources</li>
+      <li><span class="icon-heart-empty"></span>Creative, artistic, fun-loving</li>
+    </ul>
+
+    <!-- Link Buttons -->
+    {% include_relative _includes/reference_links.html %}
+
   </div>
   <div class="column list-column">
     <h4 class="subtitle">Skills</h4>
