--- a/_includes/reference_links.html
+++ b/_includes/reference_links.html
@@ -2,5 +2,5 @@
   <a class="button inline" href="/assets/jlh_resume_sept2017_experience.pdf"><span class="icon-file-pdf"></span>Resume<sup>Sept '17</sup></a>
   <a class="button inline" href="http://linkedin.com/in/jldennison"><span class="icon-linkedin-squared"></span>LinkedIn</a>
   <a class="button inline" href="http://github.com/jannypie"><span class="icon-github"></span>GitHub</a>
-  <a class="button inline" href="http://webworke.rs/jan-dennison/">An Interview</a>
+  <!-- <a class="button inline" href="http://webworke.rs/jan-dennison/">An Interview</a> -->
 </section>
