add experience sections

--- a/_includes/index/index_section2.html
+++ b/_includes/index/index_section2.html
@@ -12,18 +12,21 @@
       <li>BEM, Atomic naming conventions</li>
       <li>Mobile-first design and development</li>
       <li>Cross-browser testing</li>
-      <li>Media queries</li>
+      <li class="li--margin-bottom">Media queries</li>
     </ul>
-  </div>
-  <div class="column list-column">
     <h4 class="subtitle">Tools</h4>
     <ul class="no-bullets">
-      <!-- <h5 class="list-heading">Design
-</h5> -->
       <li>Device labs</li>
       <li>Browser/device simulators</li>
       <li>Bootstrap, Atomic, responsive frameworks</li>
       <li>fitvids.js</li>
+    </ul>
+  </div>
+  <div class="column list-column">
+    <h4 class="subtitle">Experience</h4>
+    <ul class="no-bullets">
+      <li class="li--margin-bottom">Converted static retail site to responsive layout using CSS Flexbox, allowing client to drop 3rd party mobile service.</li>
+      <li>Wrote custom CSS grid for individual client replacing a Bootstrap framework.</li>
     </ul>
   </div>
 </section>
