--- a/_includes/index/index_section3.html
+++ b/_includes/index/index_section3.html
@@ -7,33 +7,47 @@
   </div>
   <div class="column list-column">
     <h4 class="subtitle">Skills</h4>
-    <ul class="no-bullets">
-      <h5 class="list-heading">Understanding</h5>
-      <li>Font Legibility</li>
-      <li>Color Contrast</li>
-      <li>ARIA Attributes</li>
-      <li>Site navigation</li>
-      <li>Image alternatives</li>
-      <li>Color Blindness</li>
-      <li>Hand/Eye Mobility</li>
-      <li>Delayed Cognition</li>
+    <ul class="no-bullets accordion">
+      <li>
+        <input class="accordion-checkbox" type="checkbox" id="item30" value="">
+        <label class="accordion-label" for="item30">Accessibility</label>
+        <ul class="no-bullets">
+          <li>Font Legibility</li>
+          <li>Color Contrast</li>
+          <li>ARIA Attributes</li>
+          <li>Site navigation</li>
+          <li>Image alternatives</li>
+          <li>Color Blindness</li>
+          <li>Hand/Eye Mobility</li>
+          <li>Delayed Cognition</li>
+          <li>Reading Level</li>
+        </ul>
+      </li>
+      <li class="li--margin-bottom"></li>
+      <h4 class="subtitle">Tools</h4>
+      <input class="accordion-checkbox" type="checkbox" id="item31" value="">
+      <label class="accordion-label" for="item31">Compliance</label>
+      <ul class="no-bullets">
+        <li>W3 Consortium</li>
+        <li>WCAG 2.0</li>
+        <li>Section 508</li>
+        <li>WAI-ARIA</li>
+        <li>WAVE by AIM</li>
+      </ul>
+      <input class="accordion-checkbox" type="checkbox" id="item32" value="">
+      <label class="accordion-label" for="item32">Technology</label>
+      <ul class="no-bullets">
+        <li>Voice Over</li>
+        <li>Color Testing</li>
+        <li>Contrast Testing</li>
+        <li>Adaptive Equipment</li>
+      </ul>
     </ul>
   </div>
   <div class="column list-column">
-    <h4 class="subtitle">Tools</h4>
+    <h4 class="subtitle">Experience</h4>
     <ul class="no-bullets">
-      <h5 class="list-heading">Guidelines</h5>
-      <li>W3 Consortium</li>
-      <li>WCAG 2.0</li>
-      <li>Section 508</li>
-      <li>WAI-ARIA</li>
-      <li>WAVE by AIM</li>
-      <h5 class="list-heading">Technology</h5>
-      <li>Voice Over</li>
-      <li>Color Testing</li>
-      <li>Contrast Testing</li>
-      <li>Adaptive Equipment</li>
-      <li></li>
+      <li class="li--margin-bottom">Made retail site more accessible by adding ARIA roles, implementing keyboard navigation, and reducing <a href="http://wave.webaim.org/" target="_blank">WebAim WAVE</a> errors.</li>
     </ul>
   </div>
 </section>
