--- a/_includes/index/index_section1.html
+++ b/_includes/index/index_section1.html
@@ -7,40 +7,102 @@
   <div class="column list-column">
     <h4 class="subtitle">Skills</h4>
     <ul class="no-bullets">
-      <h5 class="list-heading">User Experience</h5>
-      <li>Design sense</li>
-      <li>Graphic design</li>
-      <li>Web design</li>
-      <li>User Research</li>
-      <li>Wireframes</li>
-      <li>Styleguides</li>
-      <li>Prototypes</li>
-      <li>Interactions</li>
-      <h5 class="list-heading">Digital Optimization</h5>
-      <li>SEO</li>
-      <li>Social media</li>
-      <li>Digital Marketing</li>
-      <li>Branding</li>
+      <ul class="no-bullets accordion">
+        <li>
+          <input class="accordion-checkbox" type="checkbox" id="item10" value="">
+          <label class="accordion-label" for="item10">Graphic Design</label>
+          <ul class="no-bullets">
+            <li>Digital Art</li>
+            <li>Photography</li>
+            <li>Branding</li>
+            <li>Typography</li>
+            <li>Color Theory</li>
+            <li>Info Hierarchy</li>
+            <li>Infographics</li>
+          </ul>
+        </li>
+        <li>
+          <input type="checkbox" id="item11" value="">
+          <label for="item11">Web Design</label>
+          <ul class="no-bullets">
+            <li>HTML, CSS, JS</li>
+            <li>Web Fonts</li>
+            <li>Responsive Layout</li>
+            <li>Mobile-First</li>
+            <li>Content Management</li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="no-bullets accordion">
+        <li>
+          <input class="accordion-checkbox" type="checkbox" id="item12" value="">
+          <label class="accordion-label" for="item12">UX Design</label>
+          <ul class="no-bullets">
+            <li>User Research</li>
+            <li>Usability</li>
+            <li>Wireframes</li>
+            <li>Styleguides</li>
+            <li>Prototypes</li>
+            <li>Interactions</li>
+            <li>Accessibility</li>
+          </ul>
+        </li>
+      </ul>
+      <li>Creativity</li>
+      <li>Problem-solving</li>
+      <li class="li--margin-bottom">Collaboration</li>
     </ul>
-
-  </div>
-  <div class="column list-column">
     <h4 class="subtitle">Tools</h4>
     <ul class="no-bullets">
-      <h5 class="list-heading">Design</h5>
-      <li>Sketch, Photoshop</li>
-      <li>Balsamiq, wireframe.it</li>
-      <li>Codepen.io/jannypie</li>
-      <li>Browser Dev Tools</li>
-      <h5 class="list-heading">Code</h5>
-      <li>HTML</li>
-      <li>CSS, Scss</li>
-      <li>CSS Animations, Parallax</li>
-      <li>SVG images</li>
-      <li>JavaScript, jQuery</li>
-      <li>Ruby, Rails</li>
-      <li>PHP, Laravel</li>
-      <li>Wordpress</li>
+      <ul class="no-bullets accordion">
+        <li>
+          <input class="accordion-checkbox" type="checkbox" id="item13" value="">
+          <label class="accordion-label" for="item13">Software Programs</label>
+          <ul class="no-bullets">
+            <li>Photoshop</li>
+            <li>Illustrator</li>
+            <li>InDesign</li>
+            <li><a target="_blank" class="icon-rocket" href="https://www.sketchapp.com/" title="Sketch design app">Sketch</a></li>
+          </ul>
+        </li>
+        <li>
+          <input class="accordion-checkbox" type="checkbox" id="item14" value="">
+          <label class="accordion-label" for="item14">Wireframe Tools</label>
+          <ul class="no-bullets">
+            <li><a target="_blank" class="icon-rocket" href="https://balsamiq.com/" title="Balsamic wire frame tool">Balsamiq</a></li>
+            <li><a target="_blank" class="icon-rocket" href="https://wireframe.cc">wireframe.cc</a></li>
+            <li><a target="_blank" class="icon-rocket" href="Codepen.io/jannypie" title="My code pen dashboard">codepen.io</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="no-bullets accordion
+">
+        <li>
+          <input class="accordion-checkbox" type="checkbox" id="item15" value="">
+          <label class="accordion-label" for="item15">Code</label>
+          <ul class="no-bullets">
+            <li>HTML</li>
+            <li>CSS, Scss</li>
+            <li>CSS Animations, Parallax</li>
+            <li>SVG images</li>
+            <li>JavaScript, jQuery</li>
+            <li>Ruby, Rails</li>
+            <li>PHP, Laravel</li>
+            <li>Wordpress</li>
+          </ul>
+        </li>
+    </ul>
+    <li>Browser Dev Tools</li>
+    <li>Front-End Frameworks</li>
+    </ul>
+  </div>
+  <div class="column list-column">
+    <h4 class="subtitle">Experience</h4>
+    <ul class="no-bullets">
+      <li class="li--margin-bottom">Trained teams on User Experience practice, including compliance, standards, styleguides, accessibility, &amp; overall usability.
+      </li>
+      <li class="li--margin-bottom">Taught User Experience workshops for Girl Develop It.</li>
+      <li class="li--margin-bottom">Freelanced graphic and web design for several years.</li>
     </ul>
   </div>
 </section>
