--- a/_includes/index/index_section4.html
+++ b/_includes/index/index_section4.html
@@ -13,10 +13,8 @@
       <li>Page Load</li>
       <li>Javascript</li>
       <li>AJAX, JSON</li>
-      <li>REST</li>
+      <li class="li--margin-bottom">REST</li>
     </ul>
-  </div>
-  <div class="column list-column">
     <h4 class="subtitle">Tools</h4>
     <ul class="no-bullets">
       <li>Code validators</li>
@@ -25,6 +23,13 @@
       <li>CDN</li>
       <li>Page Speed, YSlow</li>
       <li>Postman</li>
+    </ul>
+  </div>
+  <div class="column list-column">
+    <h4 class="subtitle">Experience</h4>
+    <ul class="no-bullets">
+      <li class="li--margin-bottom">Raised eCommerce site YSlow score by implementing a Javascript compiling &amp; minifying build process.</li>
+      <li>Developed parallax marketing experience using dynamic image loading, reaching 60fps scroll rate.</li>
     </ul>
   </div>
 </section>
