update my last name

--- a/_includes/header_page.html
+++ b/_includes/header_page.html
@@ -1,6 +1,6 @@
 <header>
-    {% include nav.html %}
-    <h1>
-      <a href="{{ site.url }}" rel="bookmark" title="Website for Jan Dennison">Jan Dennison</a>
+  {% include nav.html %}
+  <h1>
+      <a href="{{ site.url }}" rel="bookmark" title="Website for Jan Humphries">Jan Humphries</a>
     </h1>
 </header>
