--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,11 +11,14 @@ _________,   ___/ /  ,__________
              ``_,
  -->
 <meta charset="utf-8">
+<!-- Instruct Internet Explorer to use its latest rendering engine -->
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<!-- Viewport for responsive web design -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{{ page.title }}</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="{{ page.meta-description }}" />
 <meta name="author" content="Jan Dennison Humphries">
 <meta name="robots" content="{{ page.meta-robots }}" />
-<meta name="description" content="{{ page.meta-description }}" />
 <link rel="canonical" href="{{ page.url | canonical }}" />
 <link rel="shortcut icon" href="favicon.ico">
 
@@ -28,6 +31,3 @@ _________,   ___/ /  ,__________
 
 <!-- Fonts -->
 <link rel="stylesheet" href="/css/icomoon.css">
-
-<!-- Highlight Code Syntax -->
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
